Correct name spelling in team information

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ footer {
     <h2>1. Thông tin nhóm</h2>
     <ul>
         <li>Trần Huỳnh Long – 22004060</li>
-        <li>Phạm Phúc Đạo – 22004066</li>
+        <li>Phạm Phúc Đào – 22004066</li>
         <li>Nguyễn Thế Lực – 22004131</li>
     </ul>
 
