Fix typo in member name from 'Lực' to 'Luc'

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@ footer {
                 <span>MSSV: 22004066</span>
             </div>
             <div class="member">
-                <strong>Nguyễn Thế Lực</strong>
+                <strong>Nguyễn Thế Luc</strong>
                 <span>MSSV: 22004131</span>
             </div>
         </div>
