--- a/index.html
+++ b/index.html
@@ -480,8 +480,8 @@
         <ul class="nav-links">
             <li><a href="#intro" class="active" onclick="showLab('intro')"><i class="fa-solid fa-users"></i> Giới thiệu Nhóm</a></li>
             <li><a href="#lab1" onclick="showLab('lab1')"><i class="fa-solid fa-cloud"></i> Lab Tuần 1</a></li>
-            <li><a href="#lab2" onclick="showLab('lab2')"><i class="fa-solid fa-id-card-clip"></i> Lab Tuần 2 (IAM)</a></li>
-            <li><a href="#lab3" onclick="showLab('lab3')"><i class="fa-regular fa-clock"></i> Lab Tuần 3</a></li>
+            <li><a href="#lab2" onclick="showLab('lab2')"><i class="fa-solid fa-id-card-clip"></i> Lab Tuần 2</a></li>
+            <li><a href="#lab3" onclick="showLab('lab3')"><i class="fa-solid fa-shield-halved"></i> Lab Tuần 3</a></li>
             <li><a href="#lab4" onclick="showLab('lab4')"><i class="fa-regular fa-clock"></i> Lab Tuần 4</a></li>
             <li><a href="#lab5" onclick="showLab('lab5')"><i class="fa-regular fa-clock"></i> Lab Tuần 5</a></li>
         </ul>
@@ -941,3 +941,4 @@
     </script>
 </body>
 </html>
+
